**Refactor Dev: Streamline SQL Performance Tracking Implementation**
- Renamed core SQL tracking classes (e.g., `SqlPerformanceContext` → `SqlPerfContext`) for consistency and brevity.
- Updated all relevant imports, references, and method definitions to align with new class names.
- Enhanced `SqlLoggingListener` to integrate query execution metrics with `SqlPerfContext` for detailed tracking.
- Added nanosecond precision in query execution time tracking and refactored logging for readability (`⚡`, `🐛`, etc.).
- Improved Docker multi-stage build process:
  - Added Java crypto modules for HTTPS/TLS support.
  - Enhanced Spring Boot layering to optimize Docker image caching and reduce redeploy times.
  - Updated JVM and ZGC configurations for financial workloads.
- Adjusted exception handling logs for clarity in `ValidationExceptionHandler`.

Streamlined SQL performance tracking, optimized Docker and JVM configuration, and improved logging practices for better maintainability.